# stewardx

./: .gitignore  Cargo.toml  README.md  docker-postgres-temp.sh
.github/workflows/: cross_compile.yml
migrations/: 20200723212810_steward_tasks.sql  20200723212870_steward_task_post_webhooks.sql  steward_task_errors.sql  steward_task_execution_report.sql  steward_tasks.sql
scripts/: build-panel.sh  docker-postgres-pers.sh  docker-postgres-temp.sh  migrations.sh
src/: config.rs  main.rs  messages.rs  traits.rs  types.rs
src/db/: manager.rs  messages.rs  mod.rs
src/executor/: manager.rs  messages.rs  mod.rs
src/models/: execution_report_model.rs  mod.rs  output_model.rs  post_webhook_model.rs  task_error_model.rs  task_model.rs
src/reactor/: exmanager.rs  messages.rs  mod.rs  new.rs
src/server/: app_router.rs  handlers.rs  messages.rs  mod.rs  utils.rs
src/socket/: mod.rs  socket_listener.rs  unix_utils.rs
src/tasks/: errors.rs  frequency.rs  messages.rs  mod.rs  watcher.rs
src/tasks/cmd_async/: mod.rs  task.rs
src/tasks/docker_async/: image_type.rs  mod.rs  task.rs
