[package]
name = "stewardx"
version = "0.1.0"
authors = ["vagrant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
async-trait = "0.1.42"
futures = "0.3.12"
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] } 
serde_json = "1.0.62"
tokio-stream = { version = "0.1.3", features = ["io-util"] }
tracing = "0.1.23"
tracing-futures = "0.2.4"
cron = "0.8.0"
tracing-subscriber = { version = "0.2.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
hyper = "0.14.4"
routerify = "2.0.0-beta-2"
anyhow = "1.0.38"