[package]
name = "stewardx"
version = "0.1.0"
authors = ["Gökay Okyay <gokayokyay@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
async-trait = "0.1.42"
futures = "0.3.12"
sqlx = { version = "0.5.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] } 
serde_json = "1.0.62"
tokio-stream = { version = "0.1.3", features = ["io-util"] }
tracing = "0.1.23"
tracing-futures = "0.2.4"
cron = "0.9.0"
tracing-subscriber = { version = "0.2.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.0"
hyper = "0.14.4"
routerify = "2.0.0"
anyhow = "1.0.38"
shiplift = { version = "0.7.0", optional = true }
once_cell = { version = "1.7.2", optional = true }
tempfile = { version = "3.2.0", optional = true }
url = "2.2.1"

[features]
default = ["docker", "panel", "cmd"]
docker = ["shiplift", "once_cell", "tempfile"]
panel = ["server"]
server = []
cmd = []