[package]
name = "stewardx"
version = "0.2.0"
authors = ["Gökay Okyay <gokayokyay@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
async-trait = "0.1.50"
futures = "0.3.15"
sqlx = { version = "0.5.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] } 
serde_json = "1.0.64"
tokio-stream = { version = "0.1.5", features = ["io-util"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
cron = "0.9.0"
tracing-subscriber = { version = "0.2.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
hyper = "0.14.7"
routerify = "2.0.2"
anyhow = "1.0.40"
shiplift = { version = "0.7.0", optional = true }
once_cell = { version = "1.7.2", optional = true }
tempfile = { version = "3.2.0", optional = true }
url = "2.2.2"
home = "0.5.3"
tracing-appender = "0.1.2"

[features]
default = ["docker", "panel", "cmd", "server-crud"]
docker = ["shiplift", "once_cell", "tempfile"]
panel = ["server"]
server-crud = []
server = []
cmd = []